updated the config.toml

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,7 +29,7 @@ jobs:
           extended: true
 
       - name: Build Hugo site
-        run: hugo --minify --baseURL="https://muffadalis.github.io/teeny-print-studio"
+        run: hugo --minify --baseURL="https://muffadalis.github.io/teeny-print-studio/"
 
       - name: List build output
         run: ls -R public
