minor tweaks to config file

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://example.com/"
 languageCode = "en-us"
 title = "3D Printing Service"
 canonifyURLs = true
-relativeURLs = true
+relativeURLs = false  # must be false for GitHub Pages project sites
 
 [params]
   description = "Custom 3D printing service for gaming miniatures, phone cases, and personalized gifts"
